--- a/pages/GetRecommendationsAi.html
+++ b/pages/GetRecommendationsAi.html
@@ -41,7 +41,7 @@
           <!-- Centered nav links -->
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Recommendations!!!@#</a>
+              <a class="nav-link" href="#">Recommendations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">My Library</a>
