--- a/pages/book_detail.html
+++ b/pages/book_detail.html
@@ -91,7 +91,7 @@
           <div class="col-12 col-md-5 col-lg-4">
             <div class="card h-100">
               <img
-                src="giver_cover.jpg"
+                src="../book_detail/giver_cover.jpg"
                 alt="The Giver cover"
                 class="card-img-top img-fluid book-cover"
               />
