added book_search page
made booksearch page. mainly made from chat gpt honestly. so if anyone wants to make changes go right ahead with that. also made a minor change in bookdetails.

--- a/pages/book_detail.html
+++ b/pages/book_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FIX: rel attribute -->
     <link rel="stylesheet" href="styles.css" />
-    <title>BookWise.io</title>
+    <title>Book Detail</title>
 
     <!-- Bootstrap CSS -->
     <link
