--- a/pages/book_search.html
+++ b/pages/book_search.html
@@ -1,76 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" data-bs-theme="dark" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <title>Book Search</title>
-    <style>
-      body {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column; /* ensure footer sits at bottom */
-        background: #f8f9fa;
-      }
-      main {
-        flex: 1; /* push footer down */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    </style>
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BookWise.io – Search</title>
 
-  </head>
-  <body>
-    <main>
-      <div class="container d-flex justify-content-center align-items-center">
-        <div class="card shadow" style="min-width: 350px">
-          <div class="card-body">
-            <div class="text-center mb-3">
-              <span class="logo d-flex flex-column align-items-center gap-1">
-                <i class="bi bi-exclamation-circle" style="font-size: 2rem;"></i>
-                <span class="fw-bold fs-4">404 error</span>
-              </span>
-            </div>
-            <h3 class="card-title text-center mb-4">Page Not Found</h3>
-           <div>The page you are looking for does not exist</div>
-              <button class="btn btn-primary w-100 mt-4" type="submit">
-                <i class="bi bi-arrow-right me-2"></i>
-                Go Home
-              </button>
+  <!-- Bootstrap & Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- site stylesheet (shared) -->
+  <link rel="stylesheet" href="../book_detail/stylesheet.css">
+</head>
+<body>
+
+  <!-- Header / Navbar -->
+  <nav class="navbar navbar-expand-lg bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+        <i class="bi bi-bookmark-fill"></i><span class="logo-mark">BookWise.io</span>
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topnav" aria-controls="topnav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div id="topnav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-3 me-auto align-items-lg-center">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item d-none d-lg-block">
+            <form class="ms-2 nav-search-form" role="search">
+              <div class="input-group">
+                <span class="input-group-text bg-white"><i class="bi bi-search"></i></span>
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+              </div>
             </form>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Recommendations</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">My Library</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Ask the Librarian</a></li>
+        </ul>
+
+        <a href="#" class="nav-link p-0 ms-lg-2"><i class="bi bi-person-circle fs-3"></i></a>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container-fluid py-4">
+    <div class="row g-4">
+      <!-- Left: Search + Results -->
+      <section class="col-lg-8">
+        <h2 class="search-hero-title h3 mb-3">Search Books</h2>
+
+        <!-- Big search bar like the wireframe -->
+        <div class="search-box d-flex align-items-center gap-2 mb-3">
+          <i class="bi bi-search fs-4 ms-1"></i>
+          <input class="form-control border-0" type="text" placeholder="Search by title, author, or keyword…" />
+        </div>
+
+        <!-- Results panel with one example book card -->
+        <div class="results-panel p-3">
+          <div class="row g-3">
+            <div class="col-6 col-md-4 col-lg-3">
+              <div class="card book-card h-100">
+                <img src="../book_detail/giver_cover.jpg" class="card-img-top" alt="Book cover">
+                <div class="card-body p-2">
+                  <h6 class="card-title mb-1 text-truncate" title="The Giver">The Giver</h6>
+                  <p class="card-text small mb-2 text-muted text-truncate" title="Lois Lowry">Lois Lowry</p>
+                  <div class="d-flex align-items-center gap-2 small">
+                    <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                    <span>4.7</span>
+                  </div>
+                </div>
+                <div class="card-footer bg-white border-0 pt-0 pb-3 px-2">
+                  <button class="btn btn-sm btn-dark w-100">Add to Library</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Duplicate this col for more books later -->
           </div>
         </div>
-      </div>
-    </main>
+      </section>
 
-    <!-- Footer -->
-    <footer class="footer py-4 border-top">
-      <div class="container d-flex justify-content-between align-items-center">
-        <span class="logo d-flex align-items-center gap-2">
-          <i class="bi bi-bookmark-fill"></i> BookWise.io
-        </span>
-        <small>&copy; 2025 AI Book Recommendations. All rights reserved.</small>
-      </div>
-    </footer>
+      <!-- Right: Filters -->
+      <aside class="col-lg-4">
+        <div class="filters-panel p-3">
+          <h3 class="h4 mb-3">Filter Search</h3>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+          <div class="mb-3">
+            <label class="form-label fw-semibold">Author</label>
+            <input type="text" class="form-control" placeholder="e.g., Morgan Housel">
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label fw-semibold">Publication Date</label>
+            <div class="d-flex gap-2">
+              <input type="date" class="form-control">
+              <input type="date" class="form-control">
+            </div>
+          </div>
+
+          <div class="accordion" id="filtersAccordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="genreHead">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#genreCollapse" aria-expanded="true" aria-controls="genreCollapse">
+                  Genre
+                </button>
+              </h2>
+              <div id="genreCollapse" class="accordion-collapse collapse show" aria-labelledby="genreHead" data-bs-parent="#filtersAccordion">
+                <div class="accordion-body">
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="g1"><label class="form-check-label" for="g1">Nonfiction</label></div>
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="g2"><label class="form-check-label" for="g2">Finance</label></div>
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="g3"><label class="form-check-label" for="g3">Self-Help</label></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="ratingHead">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ratingCollapse" aria-expanded="false" aria-controls="ratingCollapse">
+                  Ratings
+                </button>
+              </h2>
+              <div id="ratingCollapse" class="accordion-collapse collapse" aria-labelledby="ratingHead" data-bs-parent="#filtersAccordion">
+                <div class="accordion-body">
+                  <div class="form-check"><input class="form-check-input" type="radio" name="rating" id="r1"><label class="form-check-label" for="r1">4+ stars</label></div>
+                  <div class="form-check"><input class="form-check-input" type="radio" name="rating" id="r2"><label class="form-check-label" for="r2">3+ stars</label></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="formatHead">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#formatCollapse" aria-expanded="false" aria-controls="formatCollapse">
+                  Format
+                </button>
+              </h2>
+              <div id="formatCollapse" class="accordion-collapse collapse" aria-labelledby="formatHead" data-bs-parent="#filtersAccordion">
+                <div class="accordion-body">
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="f1"><label class="form-check-label" for="f1">Hardcover</label></div>
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="f2"><label class="form-check-label" for="f2">Paperback</label></div>
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="f3"><label class="form-check-label" for="f3">eBook</label></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="languageHead">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#languageCollapse" aria-expanded="false" aria-controls="languageCollapse">
+                  Language
+                </button>
+              </h2>
+              <div id="languageCollapse" class="accordion-collapse collapse" aria-labelledby="languageHead" data-bs-parent="#filtersAccordion">
+                <div class="accordion-body">
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="l1"><label class="form-check-label" for="l1">English</label></div>
+                  <div class="form-check"><input class="form-check-input" type="checkbox" id="l2"><label class="form-check-label" for="l2">Spanish</label></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <button class="btn btn-dark w-100 mt-3">Search</button>
+        </div>
+      </aside>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer-lite py-3">
+    <div class="container d-flex flex-column flex-sm-row align-items-center justify-content-between gap-2">
+      <span class="d-flex align-items-center gap-2">
+        <i class="bi bi-bookmark-fill"></i> <strong>BookWise.io</strong>
+      </span>
+      <small>&copy; 2025 AI Book Recommendations. All rights reserved.</small>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
