made 3 pages and linked them together
i have made the forgot password, reset password, and password reseted pages, and i have hyperlinked all these pages together plus the user creation and log in page i just need the libary page to link when submitted

--- a/pages/password_reseted.html
+++ b/pages/password_reseted.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="stylesheet.css" />
-    <title>Login</title>
+    <title>Password Reseted</title>
     <style>
       body {
         min-height: 100vh;
@@ -45,35 +45,9 @@
                 <span class="fw-bold fs-4">BookWise</span>
               </span>
             </div>
-            <h3 class="card-title text-center mb-4">Login</h3>
-            <form>
-              <div class="mb-3">
-                <label for="validationCustomUsername" class="form-label">Username</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="validationCustomUsername"
-                  required
-                />
-                <div class="invalid-feedback">Please choose a username.</div>
-              </div>
-              <div class="mb-3">
-                <label for="validationCustomPassword" class="form-label">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="validationCustomPassword"
-                  required
-                />
-                <div class="invalid-feedback">Please enter your password.</div>
-              </div>
-              <div class="mb-3 d-flex justify-content-end">
-                <a href="forgot_password.html" class="link-primary small">Forgot password?</a>
-              </div>
-              <button class="btn btn-primary w-100" type="submit">Submit</button>
-              <div class="text-center mt-3">
-                <span class="small">New to Bookwise? </span>
-                <a href="user_creation.html" class="small link-primary">Create an account</a>
+            <h3 class="card-title text-center mb-4">Password Reseted</h3>
+            <p class="text-center mb-4">Your password has been successfully reset.</p>
+              <a href="#" class="btn btn-primary w-100" role="button">Go to your account</a>
               </div>
             </form>
           </div>
