--- a/pages/user_creation.html
+++ b/pages/user_creation.html
@@ -100,7 +100,7 @@
               <button class="btn btn-primary w-100" type="submit">Creat Account</button>
               <div class="text-center mt-3">
                 <span class="small">Already have an acount? </span>
-                <a href="#" class="small link-primary">Sign in</a>
+                <a href="log_in.html" class="small link-primary">Sign in</a>
               </div>
             </form>
           </div>
