--- a/pages/forgot_password.html
+++ b/pages/forgot_password.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="stylesheet.css" />
-    <title>Login</title>
+    <title>Forgot Password</title>
     <style>
       body {
         min-height: 100vh;
@@ -45,35 +45,33 @@
                 <span class="fw-bold fs-4">BookWise</span>
               </span>
             </div>
-            <h3 class="card-title text-center mb-4">Login</h3>
+            <h3 class="card-title text-center mb-4">Forgot password</h3>
             <form>
               <div class="mb-3">
-                <label for="validationCustomUsername" class="form-label">Username</label>
+                <label for="validationCustomEmail" class="form-label">Enter email</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="validationCustomUsername"
+                  id="validationCustomEmail"
                   required
                 />
-                <div class="invalid-feedback">Please choose a username.</div>
+                <div class="invalid-feedback">Please choose a Email.</div>
               </div>
+              <button class="btn btn-primary w-100 mb-3" type="submit">Send verification code</button>
               <div class="mb-3">
-                <label for="validationCustomPassword" class="form-label">Password</label>
+                <label for="validationCustomPassword" class="form-label">Enter verification code</label>
                 <input
                   type="password"
                   class="form-control"
                   id="validationCustomPassword"
                   required
                 />
-                <div class="invalid-feedback">Please enter your password.</div>
+                <div class="invalid-feedback">Please enter your verification code.</div>
               </div>
-              <div class="mb-3 d-flex justify-content-end">
-                <a href="forgot_password.html" class="link-primary small">Forgot password?</a>
-              </div>
-              <button class="btn btn-primary w-100" type="submit">Submit</button>
+              <a href="reset_password.html" class="btn btn-primary w-100" role="button">Reset Password</a>
               <div class="text-center mt-3">
-                <span class="small">New to Bookwise? </span>
-                <a href="user_creation.html" class="small link-primary">Create an account</a>
+                <span class="small">Remember password? </span>
+                <a href="log_in.html" class="small link-primary">Log in</a>
               </div>
             </form>
           </div>
