--- a/pages/reset_password.html
+++ b/pages/reset_password.html
@@ -67,7 +67,7 @@
                 />
                 <div class="invalid-feedback">Please enter a Password.</div>
               </div>
-              <button class="btn btn-primary w-100" type="submit">Reset Password</button>
+              <a href="password_reseted.html" class="btn btn-primary w-100" role="button">Reset Password</a>
               <div class="text-center mt-3">
                 <span class="small">Remember password? </span>
                 <a href="log_in.html" class="small link-primary">Log in</a>
