--- a/pages/GetRecommendationsAi.html
+++ b/pages/GetRecommendationsAi.html
@@ -41,7 +41,7 @@
           <!-- Centered nav links -->
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Recommendations</a>
+              <a class="nav-link" href="GetRecommendationsAi.html">Recommendations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">My Library</a>
@@ -49,7 +49,7 @@
           </ul>
           <!-- Right-aligned icons -->
           <div class="d-flex align-items-center gap-3">
-            <a href="#" class="nav-link p-0"
+            <a href="book_search.html" class="nav-link p-0"
               ><i class="bi bi-search" style="font-size: 1.5rem"></i
             ></a>
             <div class="dropdown">
@@ -63,9 +63,9 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Personal Library</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="user_settings.html">Settings</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a class="dropdown-item" href="log_in.html">Logout</a></li>
               </ul>
             </div>
           </div>
