added link to library
added link to all pages for library pages

--- a/pages/GetRecommendationsAi.html
+++ b/pages/GetRecommendationsAi.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="GetRecommendationsAi.html">Recommendations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Library</a>
+              <a class="nav-link" href="MyLibrary.html">My Library</a>
             </li>
           </ul>
           <!-- Right-aligned icons -->
