--- a/pages/book_search.html
+++ b/pages/book_search.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="GetRecommendationsAi.html">Recommendations</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">My Library</a></li>
+            <li class="nav-item"><a class="nav-link" href="MyLibrary.html">My Library</a></li>
           </ul>
           <div class="d-flex align-items-center gap-3">
             <a href="book_search.html" class="nav-link p-0"><i class="bi bi-search" style="font-size: 1.5rem"></i></a>
