--- a/pages/Recommendations.html
+++ b/pages/Recommendations.html
@@ -195,15 +195,15 @@
           <!-- Centered nav links -->
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Recommendations</a>
+              <a class="nav-link" href="Recommendations.html">Recommendations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Library</a>
+              <a class="nav-link" href="MyLibrary.html">My Library</a>
             </li>
           </ul>
           <!-- Right-aligned icons -->
           <div class="d-flex align-items-center gap-3">
-            <a href="#" class="nav-link p-0"
+            <a href="book_search.html" class="nav-link p-0"
               ><i class="bi bi-search" style="font-size: 1.5rem"></i
             ></a>
             <div class="dropdown">
@@ -216,10 +216,9 @@
                 <i class="bi bi-person-circle" style="font-size: 2rem"></i>
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Personal Library</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="user_settings.html">Settings</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a class="dropdown-item" href="log_in.html">Logout</a></li>
               </ul>
             </div>
           </div>
