--- a/pages/GetRecommendationsAi.html
+++ b/pages/GetRecommendationsAi.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container-fluid">
         <!-- Logo and Brand -->
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="book_search.html">
           <i class="bi bi-bookmark-fill me-2"></i> BookWise.io
         </a>
         <!-- Hamburger button for mobile -->
