--- a/pages/MyLibrary.html
+++ b/pages/MyLibrary.html
@@ -21,9 +21,9 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <!-- Logo and Brand -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <i class="bi bi-bookmark-fill me-2"></i> BookWise.io
-      </a>
+     <a class="navbar-brand d-flex align-items-center" href="book_search.html">
+          <i class="bi bi-bookmark-fill me-2"></i> BookWise.io
+        </a>
       <!-- Hamburger button for mobile -->
       <button
         class="navbar-toggler"
