--- a/pages/book_search.html
+++ b/pages/book_search.html
@@ -16,7 +16,7 @@
   <!-- Header / Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="book_search.html">
           <i class="bi bi-bookmark-fill me-2"></i> BookWise.io
         </a>
         <button
