--- a/pages/user_settings.html
+++ b/pages/user_settings.html
@@ -45,7 +45,7 @@
     <!-- FIX: navbar belongs in body -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="book_search.html">
           <i class="bi bi-bookmark-fill me-2"></i> BookWise.io
         </a>
         <button
