--- a/pages/Recommendations.html
+++ b/pages/Recommendations.html
@@ -195,7 +195,7 @@
           <!-- Centered nav links -->
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="Recommendations.html">Recommendations</a>
+              <a class="nav-link" href="GetRecommendationsAi.html">Recommendations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="MyLibrary.html">My Library</a>
