--- a/pages/hw3.html
+++ b/pages/hw3.html
@@ -6,17 +6,18 @@
     <title>Homework 3</title>
 </head>
 <body>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/book_detail.html">Book Detail</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/book_search.html">Book Search</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/ErrorPage.html">Error Page</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/forgot_password.html">Forgot Password</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/GetRecommendationsAi.html">Get Recommendations</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/log_in.html">Login</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/MyLibrary.html">My Library</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/password_reseted.html">Password Reseted</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/Recommendations.html">Recommendations</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/reset_password.html">Reset Password</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/user_creation.html">User Creation</a></p>
-    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/user_settings.html">User Settings</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/book_detail.html">Book Detail</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/book_search.html">Book Search</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/ErrorPage.html">Error Page</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/forgot_password.html">Forgot Password</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/GetRecommendationsAi.html">Get Recommendations</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/log_in.html">Login</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/MyLibrary.html">My Library</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/password_reseted.html">Password Reseted</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/Recommendations.html">Recommendations</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/reset_password.html">Reset Password</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/user_creation.html">User Creation</a></p>
+    <p><a href="https://cs3.calstatela.edu/~cs3220stu08/~reading-rec-web/~pages/user_settings.html">User Settings</a></p>
+
 </body>
 </html>
