--- a/pages/GetRecommendationsAi.html
+++ b/pages/GetRecommendationsAi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get Recommendations AI</title>
-    <link rel="stylesheet" href="../book_detail/lab4_style.css" />
+  <link rel="stylesheet" href="../assests/lab4_style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
