--- a/pages/book_search.html
+++ b/pages/book_search.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <!-- site stylesheet (shared) -->
-  <link rel="stylesheet" href="../book_detail/stylesheet.css">
+  <link rel="stylesheet" href="../assests/stylesheet.css">
 </head>
 <body>
 
@@ -70,7 +70,7 @@
           <div class="row g-3">
             <div class="col-6 col-md-4 col-lg-3">
               <div class="card book-card h-100">
-                <img src="../book_detail/giver_cover.jpg" class="card-img-top" alt="Book cover">
+                <img src="../assests/giver_cover.jpg" class="card-img-top" alt="Book cover">
                 <div class="card-body p-2">
                   <h6 class="card-title mb-1 text-truncate" title="The Giver">The Giver</h6>
                   <p class="card-text small mb-2 text-muted text-truncate" title="Lois Lowry">Lois Lowry</p>
